tests/NormalTests/paczka2/big_fuzzy/25678878.err
Error in line 5: 0Xt9r A652 80,6
Error in line 6: 0Xt9r A293 52,3
Error in line 18: i61klU4T A293 93,5
Error in line 19: lF8nOir4iFR A293 29,4
Error in line 23: A652 A293 57,0
Error in line 29: 0Xt9r S66 8,4
Error in line 41: lF8nOir4iFR A293 76,8
Error in line 42: lF8nOir4iFR A312 0,5
Error in line 61: 0Xt9r A3q2 87,6
Error in line 65: 2lHVh A652 29,8
Error in line 57: 0Xt9r A312 44,9
Error in line 72: A652 A312 24,5
Error in line 66: 2lHVh A312 46,8
Error in line 84: lF8nOir4iFR A293 91,0
Error in line 89: eOJu1M A652 58,6
Error in line 93: 0Xt9r S66 71,6
Error in line 100: nVtvKWHQ44 A293 68,8
Error in line 103: nVtvKWHQ44 S66 92,7
Error in line 115: A652 A293 58,1
Error in line 111: 2lHVh A652 72,4
Error in line 121: A65[ A31[ 148,0
Error in line 130: 0Xt9r S66 82,6
Error in line 132: 0Xt9r A652 33,0
Error in line 134: i61klU4T S66 25,4
Error in line 133: 0Xt9r S66 25,9
Error in line 161: eOJu1M A293 -1,7
Error in line 160: lF8nOir4iFR A312 91,1
Error in line 158: 0Xt9r S66 81,8
Error in line 159: nVtvKWHQ44 S66 1,4
Error in line 164: 0Xt9r A312 33,0
Error in line 167: 0Xt9r A652 83,6
Error in line 144: eOJu1M A293 6,3
Error in line 174: eOJu1M A652 82,0
Error in line 175: 2lHVh A293 47,9
Error in line 176: lF8nOir4iFR S66 42,0
Error in line 188: nVtvKWHQ44 A312 31,0
Error in line 186: lF8nOir4iFR A293 20,7
Error in line 207: nVtvKWHQ44 A312 85,5
Error in line 203: i61klU4T A312 81,3
Error in line 202: 0Xt9r S66 223,7
Error in line 219: eOJu1M S66 13,27
Error in line 200: eOJu1M A293 76,5
Error in line 222: nVtvKWHQ44 A652 14,4
Error in line 223: eOJu1M S66 15,9
Error in line 232: eOJu1M Suu 95,8
Error in line 231: eOJu1M A293 10,7
Error in line 240: eOJu1M A293 8X2
Error in line 234: eOJu1M S66 152,3
